5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4174/executions/1716_2505.log
== TEST (2019-05-14 16:21:28) 
-- CODE:
from math import*

x = eval(input("angulo de x em radianos:"))
k = int(input("valor de k termos:"))

cont = 1
sinal = -1 
soma = x 
exp = 3 


-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:22:12) 
-- CODE:
from math import*

x = eval(input("angulo de x em radianos:"))
k = int(input("valor de k termos:"))

cont = 1
sinal = -1 
soma = x 
exp = 3 



-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:22:20) 
-- CODE:
from math import*

x = eval(input("angulo de x em radianos:"))
k = int(input("valor de k termos:"))

cont = 1
sinal = -1 
soma = x 
exp = 3 



-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:22:45) 
-- CODE:
from math import*

x = eval(input("angulo de x em radianos:"))
k = int(input("valor de k termos:"))

cont = 1
sinal = -1 
soma = x 
exp = 3 



-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:23:10) 
-- CODE:
from math import*

x = eval(input("angulo de x em radianos:"))
k = int(input("valor de k termos:"))

cont = 1
sinal = -1 
res = x 
exp = 3 



-- EXECUTION TIME:
0.16457
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:

-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:

-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:26:22) 
-- CODE:
from math import*

x = eval(input("angulo de x em radianos:"))
k = int(input("valor de k termos:"))

cont = 1

sinal = -1 
res = x 
exp = 3

while(cont < k):
	
	
	



-- ERROR:
File "XXXX", line 18
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:26:23) 
-- CODE:
from math import*

x = eval(input("angulo de x em radianos:"))
k = int(input("valor de k termos:"))

cont = 1

sinal = -1 
res = x 
exp = 3

while(cont < k):
	
	
	



-- ERROR:
File "XXXX", line 18
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:31:57) 
-- CODE:
from math import*

x = eval(input("angulo de x em radianos:"))
k = int(input("valor de k termos:"))

cont = 1

sinal = -1 
res = x 
exp = 3

while(cont < k):
	res = res + (sinal*( x**exp/factorial(expoente))) 
	
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    res = res + (sinal*( x**exp/factorial(expoente))) 
NameError: name 'expoente' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:35:04) 
-- CODE:
from math import*

x = eval(input("angulo de x em radianos:"))
k = int(input("valor de k termos:"))

cont = 1

sinal = -1 
res = x 
exp = 3

while(cont < k):
	res = res + (sinal*( x**exp/factorial(expoente))) 
	sinal =  sinal * -1
	exp = exp + 2 
	cont = con + 1
print(cont)	
	
	



-- EXECUTION TIME:
0.142519
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 13, in <module>
    res = res + (sinal*( x**exp/factorial(expoente))) 
NameError: name 'expoente' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:35:05) 
-- CODE:
from math import*

x = eval(input("angulo de x em radianos:"))
k = int(input("valor de k termos:"))

cont = 1

sinal = -1 
res = x 
exp = 3

while(cont < k):
	res = res + (sinal*( x**exp/factorial(expoente))) 
	sinal =  sinal * -1
	exp = exp + 2 
	cont = con + 1
print(cont)	
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    res = res + (sinal*( x**exp/factorial(expoente))) 
NameError: name 'expoente' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:36:08) 
-- CODE:
from math import*

x = eval(input("angulo de x em radianos:"))
k = int(input("valor de k termos:"))

cont = 1

sinal = -1 
res = x 
exp = 3

while(cont < k):
	res = res + (sinal*( x**exp/factorial(expoente))) 
	sinal =  sinal * -1
	exp = exp + 2 
	cont = con + 1
print(cont)	
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    res = res + (sinal*( x**exp/factorial(expoente))) 
NameError: name 'expoente' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:36:09) 
-- CODE:
from math import*

x = eval(input("angulo de x em radianos:"))
k = int(input("valor de k termos:"))

cont = 1

sinal = -1 
res = x 
exp = 3

while(cont < k):
	res = res + (sinal*( x**exp/factorial(expoente))) 
	sinal =  sinal * -1
	exp = exp + 2 
	cont = con + 1
print(cont)	
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    res = res + (sinal*( x**exp/factorial(expoente))) 
NameError: name 'expoente' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:36:26) 
-- CODE:
from math import*

x = eval(input("angulo de x em radianos:"))
k = int(input("valor de k termos:"))

cont = 1

sinal = -1 
res = x 
exp = 3

while(cont < k):
	res = res + (sinal*( x**exp/factorial(expoente))) 
	sinal =  sinal * -1
	exp = exp + 2 
	cont = cont + 1
print(cont)	
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    res = res + (sinal*( x**exp/factorial(expoente))) 
NameError: name 'expoente' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:37:12) 
-- CODE:
from math import*

x = eval(input("angulo de x em radianos:"))
k = int(input("valor de k termos:"))

cont = 1

sinal = -1 
res = x 
exp = 3

while(cont < k):
	res = res + (sinal*( x**exp/factorial(expoente))) 
	sinal =  sinal * (-1)
	exp = exp + 2 
	cont = cont + 1
print(roun(soma(10)))	
	
	



-- EXECUTION TIME:
0.130949
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 13, in <module>
    res = res + (sinal*( x**exp/factorial(expoente))) 
NameError: name 'expoente' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:37:13) 
-- CODE:
from math import*

x = eval(input("angulo de x em radianos:"))
k = int(input("valor de k termos:"))

cont = 1

sinal = -1 
res = x 
exp = 3

while(cont < k):
	res = res + (sinal*( x**exp/factorial(expoente))) 
	sinal =  sinal * (-1)
	exp = exp + 2 
	cont = cont + 1
print(roun(soma(10)))	
	
	



-- EXECUTION TIME:
0.171852
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 13, in <module>
    res = res + (sinal*( x**exp/factorial(expoente))) 
NameError: name 'expoente' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:37:14) 
-- CODE:
from math import*

x = eval(input("angulo de x em radianos:"))
k = int(input("valor de k termos:"))

cont = 1

sinal = -1 
res = x 
exp = 3

while(cont < k):
	res = res + (sinal*( x**exp/factorial(expoente))) 
	sinal =  sinal * (-1)
	exp = exp + 2 
	cont = cont + 1
print(roun(soma(10)))	
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    res = res + (sinal*( x**exp/factorial(expoente))) 
NameError: name 'expoente' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:38:19) 
-- CODE:
from math import*

x = eval(input("angulo de x em radianos:"))
k = int(input("valor de k termos:"))

cont = 1

sinal = -1 
res = x 
exp = 3

while(cont < k):
	res = res + (sinal*( x**exp/factorial(expoente))) 
	sinal =  sinal * (-1)
	exp = exp + 2 
	cont = cont + 1
print(round(soma(10)))	
	
	



-- EXECUTION TIME:
0.158641
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 13, in <module>
    res = res + (sinal*( x**exp/factorial(expoente))) 
NameError: name 'expoente' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:38:19) 
-- CODE:
from math import*

x = eval(input("angulo de x em radianos:"))
k = int(input("valor de k termos:"))

cont = 1

sinal = -1 
res = x 
exp = 3

while(cont < k):
	res = res + (sinal*( x**exp/factorial(expoente))) 
	sinal =  sinal * (-1)
	exp = exp + 2 
	cont = cont + 1
print(round(soma(10)))	
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    res = res + (sinal*( x**exp/factorial(expoente))) 
NameError: name 'expoente' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:39:27) 
-- CODE:
from math import*

x = eval(input("angulo de x em radianos:"))
k = int(input("valor de k termos:"))

cont = 1

sinal = -1 
res = x 
exp = 3

while(cont < k):
	res = res + (sinal*( x**exp/factorial(exp))) 
	sinal =  sinal * (-1)
	exp = exp + 2 
	cont = cont + 1
print(round(soma(10)))	
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print(round(soma(10)))	
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:39:44) 
-- CODE:
from math import*

x = eval(input("angulo de x em radianos:"))
k = int(input("valor de k termos:"))

cont = 1

sinal = -1 
res = x 
exp = 3

while(cont < k):
	res = res + (sinal*( x**exp/factorial(exp))) 
	sinal =  sinal * (-1)
	exp = exp + 2 
	cont = cont + 1
print(round(res(10)))	
	
	



-- EXECUTION TIME:
0.136034
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 17, in <module>
    print(round(res(10)))	
TypeError: 'float' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:39:45) 
-- CODE:
from math import*

x = eval(input("angulo de x em radianos:"))
k = int(input("valor de k termos:"))

cont = 1

sinal = -1 
res = x 
exp = 3

while(cont < k):
	res = res + (sinal*( x**exp/factorial(exp))) 
	sinal =  sinal * (-1)
	exp = exp + 2 
	cont = cont + 1
print(round(res(10)))	
	
	



-- EXECUTION TIME:
0.183092
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 17, in <module>
    print(round(res(10)))	
TypeError: 'float' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:39:45) 
-- CODE:
from math import*

x = eval(input("angulo de x em radianos:"))
k = int(input("valor de k termos:"))

cont = 1

sinal = -1 
res = x 
exp = 3

while(cont < k):
	res = res + (sinal*( x**exp/factorial(exp))) 
	sinal =  sinal * (-1)
	exp = exp + 2 
	cont = cont + 1
print(round(res(10)))	
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print(round(res(10)))	
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:40:05) 
-- CODE:
from math import*

x = eval(float("angulo de x em radianos:"))
k = int(input("valor de k termos:"))

cont = 1

sinal = -1 
res = x 
exp = 3

while(cont < k):
	res = res + (sinal*( x**exp/factorial(exp))) 
	sinal =  sinal * (-1)
	exp = exp + 2 
	cont = cont + 1
print(round(res(10)))	
	
	



-- EXECUTION TIME:
0.152282
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 3, in <module>
    x = eval(float("angulo de x em radianos:"))
ValueError: could not convert string to float: 'angulo de x em radianos:'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:40:06) 
-- CODE:
from math import*

x = eval(float("angulo de x em radianos:"))
k = int(input("valor de k termos:"))

cont = 1

sinal = -1 
res = x 
exp = 3

while(cont < k):
	res = res + (sinal*( x**exp/factorial(exp))) 
	sinal =  sinal * (-1)
	exp = exp + 2 
	cont = cont + 1
print(round(res(10)))	
	
	



-- EXECUTION TIME:
0.118572
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 3, in <module>
    x = eval(float("angulo de x em radianos:"))
ValueError: could not convert string to float: 'angulo de x em radianos:'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:40:06) 
-- CODE:
from math import*

x = eval(float("angulo de x em radianos:"))
k = int(input("valor de k termos:"))

cont = 1

sinal = -1 
res = x 
exp = 3

while(cont < k):
	res = res + (sinal*( x**exp/factorial(exp))) 
	sinal =  sinal * (-1)
	exp = exp + 2 
	cont = cont + 1
print(round(res(10)))	
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x = eval(float("angulo de x em radianos:"))
ValueError: could not convert string to float: 'angulo de x em radianos:'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:40:24) 
-- CODE:
from math import*

x = eval(input("angulo de x em radianos:"))
k = int(input("valor de k termos:"))

cont = 1

sinal = -1 
res = x 
exp = 3

while(cont < k):
	res = res + (sinal*( x**exp/factorial(exp))) 
	sinal =  sinal * (-1)
	exp = exp + 2 
	cont = cont + 1
print(round(res(10)))	
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print(round(res(10)))	
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:41:00) 
-- CODE:
from math import*

x = eval(input("angulo de x em radianos:"))
k = int(input("valor de k termos:"))

cont = 1

sinal = -1 
res = x 
exp = 3

while(cont < k):
	res = res + (sinal*( x**exp/factorial(exp))) 
	sinal =  sinal * (-1)
	exp = exp + 2 
	cont = cont + 1
print(round(res(10)))	
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print(round(res(10)))	
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:43:00) 
-- CODE:
from math import*

x = float(input("angulo de x em radianos:"))
k = int(input("valor de k termos:"))

cont = 1

sinal = -1 
res = x 
exp = 3

while(cont < k):
	res = res + (sinal*( x**exp/factorial(exp))) 
	sinal =  sinal * (-1)
	exp = exp + 2 
	cont = cont + 1
print(round(res(10)))	
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x = float(input())
ValueError: could not convert string to float: 'pi/2'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:43:27) 
-- CODE:
from math import*

x = float(input("angulo de x em radianos:"))
k = int(input("valor de k termos:"))

cont = 1

sinal = -1 
res = x 
exp = 3

while(cont < k):
	res = res + (sinal*( x**exp/factorial(exp))) 
	sinal =  sinal * (-1)
	exp = exp + 2 
	cont = cont + 1
print(round(res(10)))	
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x = float(input())
ValueError: could not convert string to float: 'pi/2'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:43:27) 
-- CODE:
from math import*

x = float(input("angulo de x em radianos:"))
k = int(input("valor de k termos:"))

cont = 1

sinal = -1 
res = x 
exp = 3

while(cont < k):
	res = res + (sinal*( x**exp/factorial(exp))) 
	sinal =  sinal * (-1)
	exp = exp + 2 
	cont = cont + 1
print(round(res(10)))	
	
	



-- EXECUTION TIME:
0.12899
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 3, in <module>
    x = float(input())
ValueError: could not convert string to float: 'pi/2'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:45:30) 
-- CODE:
from math import*

x = eval(input("angulo de x em radianos:"))
k = int(input("valor de k termos:"))

cont = 1

sinal = -1 
res = x 
exp = 3

while(cont < k):
	res = res + (sinal*( x ** exp / factorial (exp)))
	sinal =  sinal * (-1)
	exp = exp + 2 
	cont = cont + 1
print(round(res(10)))	
	
	



-- EXECUTION TIME:
0.181311
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 17, in <module>
    print(round(res(10)))	
TypeError: 'float' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:45:31) 
-- CODE:
from math import*

x = eval(input("angulo de x em radianos:"))
k = int(input("valor de k termos:"))

cont = 1

sinal = -1 
res = x 
exp = 3

while(cont < k):
	res = res + (sinal*( x ** exp / factorial (exp)))
	sinal =  sinal * (-1)
	exp = exp + 2 
	cont = cont + 1
print(round(res(10)))	
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print(round(res(10)))	
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:45:42) 
-- CODE:
from math import*

x = eval(input("angulo de x em radianos:"))
k = int(input("valor de k termos:"))

cont = 1

sinal = -1 
res = x 
exp = 3

while(cont < k):
	res = res + (sinal*( x ** exp / factorial (exp)))
	sinal =  sinal * (-1)
	exp = exp + 2 
	cont = cont + 1
print(round(res(10)))	
	
	



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 17, in <module>
    print(round(res(10)))	
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:47:24) 
-- CODE:
from math import*

x = eval(input("angulo de x em radianos:"))
k = int(input("valor de k termos:"))

cont = 1

sinal = -1 59+
res = x 
exp = 3

while(cont < k):
	res = res + (sinal*( x ** exp / factorial (exp)))
	sinal =  sinal * (-1)
	exp = exp + 2 
	cont = cont + 1
print(round(res(10)))	
	
	



-- ERROR:
File "XXXX", line 8
    sinal = -1 59+
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:47:25) 
-- CODE:
from math import*

x = eval(input("angulo de x em radianos:"))
k = int(input("valor de k termos:"))

cont = 1

sinal = -1 59+
res = x 
exp = 3

while(cont < k):
	res = res + (sinal*( x ** exp / factorial (exp)))
	sinal =  sinal * (-1)
	exp = exp + 2 
	cont = cont + 1
print(round(res(10)))	
	
	



-- ERROR:
File "XXXX", line 8
    sinal = -1 59+
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:47:56) 
-- CODE:

	from math import*
x = 
k = int(input("Valor de k: "))

cont = 1
sinal = -1
resultado = x
exp = 3

while( cont < k ):
	resultado = resultado + (sinal *(x ** exp / factorial (exp)))
	sinal = sinal * -1
	exp = exp + 2
	cont += 1
print(round(resultado, 10))




-- EXECUTION TIME:
0.202473
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 2
    from math import*
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:48:18) 
-- CODE:

	from math import*
x = int(input("Valor de k: "))
k = 

cont = 1
sinal = -1
resultado = x
exp = 3

while( cont < k ):
	resultado = resultado + (sinal *(x ** exp / factorial (exp)))
	sinal = sinal * -1
	exp = exp + 2
	cont += 1
print(round(resultado, 10))




-- EXECUTION TIME:
0.157839
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 2
    from math import*
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:48:50) 
-- CODE:

	from math import*
x = int(input("Valor de b: "))
k = int(input(" k :"))

cont = 1
sinal = -1
resultado = x
exp = 3

while( cont < k ):
	resultado = resultado + (sinal *(x ** exp / factorial (exp)))
	sinal = sinal * -1
	exp = exp + 2
	cont += 1
print(round(resultado, 10))




-- EXECUTION TIME:
0.178355
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 2
    from math import*
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:48:51) 
-- CODE:

	from math import*
x = int(input("Valor de b: "))
k = int(input(" k :"))

cont = 1
sinal = -1
resultado = x
exp = 3

while( cont < k ):
	resultado = resultado + (sinal *(x ** exp / factorial (exp)))
	sinal = sinal * -1
	exp = exp + 2
	cont += 1
print(round(resultado, 10))




-- EXECUTION TIME:
0.132
-- ERROR:
  File "/home/codebench/codes/1716/2505/main.py", line 2
    from math import*
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:48:52) 
-- CODE:

	from math import*
x = int(input("Valor de b: "))
k = int(input(" k :"))

cont = 1
sinal = -1
resultado = x
exp = 3

while( cont < k ):
	resultado = resultado + (sinal *(x ** exp / factorial (exp)))
	sinal = sinal * -1
	exp = exp + 2
	cont += 1
print(round(resultado, 10))




-- ERROR:
File "XXXX", line 2
    from math import*
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:49:20) 
-- CODE:

	from math import*
x = int(input("Valor de b: "))
k = int(input(" k :"))

cont = 1
sinal = -1
resultado = x
exp = 3

while( cont < k ):
	resultado = resultado + (sinal *(x ** exp / factorial (exp)))
	sinal = sinal * -1
	exp = exp + 2
	cont += 1
print(round(resultado, 10))




-- ERROR:
File "XXXX", line 2
    from math import*
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:49:35) 
-- CODE:
from math import*
x = int(input("Valor de b: "))
k = int(input(" k :"))

cont = 1
sinal = -1
resultado = x
exp = 3

while( cont < k ):
	resultado = resultado + (sinal *(x ** exp / factorial (exp)))
	sinal = sinal * -1
	exp = exp + 2
	cont += 1
print(round(resultado, 10))




-- EXECUTION TIME:
0.140145
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 2, in <module>
    x = int(input("Valor de b: "))
ValueError: invalid literal for int() with base 10: 'pi/2'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:49:36) 
-- CODE:
from math import*
x = int(input("Valor de b: "))
k = int(input(" k :"))

cont = 1
sinal = -1
resultado = x
exp = 3

while( cont < k ):
	resultado = resultado + (sinal *(x ** exp / factorial (exp)))
	sinal = sinal * -1
	exp = exp + 2
	cont += 1
print(round(resultado, 10))




-- EXECUTION TIME:
0.134729
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2505/main.py", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: 'pi/2'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:49:44) 
-- CODE:
from math import*
x = int(input("Valor de b: "))
k = int(input(" k :"))

cont = 1
sinal = -1
resultado = x
exp = 3

while( cont < k ):
	resultado = resultado + (sinal *(x ** exp / factorial (exp)))
	sinal = sinal * -1
	exp = exp + 2
	cont += 1
print(round(resultado, 10))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: 'pi/2'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:50:00) 
-- CODE:
from math import*
x = int(input("Valor de x: "))
k = int(input(" k :"))

cont = 1
sinal = -1
resultado = x
exp = 3

while( cont < k ):
	resultado = resultado + (sinal *(x ** exp / factorial (exp)))
	sinal = sinal * -1
	exp = exp + 2
	cont += 1
print(round(resultado, 10))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: 'pi/2'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:50:31) 
-- CODE:
from math import*
x = elval(input("Valor de x: "))
k = int(input(" k :"))

cont = 1
sinal = -1
resultado = x
exp = 3

while( cont < k ):
	resultado = resultado + (sinal *(x ** exp / factorial (exp)))
	sinal = sinal * -1
	exp = exp + 2
	cont += 1
print(round(resultado,10))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = elval(input())
NameError: name 'elval' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:50:38) 
-- CODE:
from math import*
x = eval(input("Valor de x: "))
k = int(input(" k :"))

cont = 1
sinal = -1
resultado = x
exp = 3

while( cont < k ):
	resultado = resultado + (sinal *(x ** exp / factorial (exp)))
	sinal = sinal * -1
	exp = exp + 2
	cont += 1
print(round(resultado,10))




-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:50:40) 
-- CODE:
from math import*
x = eval(input("Valor de x: "))
k = int(input(" k :"))

cont = 1
sinal = -1
resultado = x
exp = 3

while( cont < k ):
	resultado = resultado + (sinal *(x ** exp / factorial (exp)))
	sinal = sinal * -1
	exp = exp + 2
	cont += 1
print(round(resultado,10))




-- EXECUTION TIME:
0.215763
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
